src/main/java/com/revolvingmadness/testing/language/interpreter/errors/Break.java
package com.revolvingmadness.testing.language.interpreter.errors;

public class Break extends RuntimeException {
    public Break() {
        super("Unexpected 'break' statement");
    }
}
